Cuda library in subfolder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
-find_package(CUDA QUIET REQUIRED)
 
-INCLUDE_DIRECTORIES(
-    include
-)
+project(CudaTemplate)
 
-CUDA_ADD_LIBRARY(
-    simplecuda
-    src/init.cu
-)
-TARGET_LINK_LIBRARIES(simplecuda ${CUDA_LIBRARIES})
-
-ADD_EXECUTABLE(main src/main.cpp)
-TARGET_LINK_LIBRARIES(main simplecuda)
-
+ADD_SUBDIRECTORY(SomeCudaLib)
+ADD_SUBDIRECTORY(MainProject)
